--- a/index.css
+++ b/index.css
@@ -163,7 +163,7 @@ p {
 	height: 100%;
 	width: 100%;
 	border-radius: 50%;
-	border: 3px solid black;
+	border: 3px solid white;
 	animation: hamburger_puls 1s ease infinite;
 }
 #header .hamburger .bar {
