--- a/index.css
+++ b/index.css
@@ -170,7 +170,7 @@ p {
 	height: 2px;
 	width: 30px;
 	position: relative;
-	background-color: black;
+	background-color: white;
 	z-index: -1;
 }
 #header .hamburger .bar::after,
